feat: add categories endpoint
