# sngf_api/plant/api/urls.py
@@ -1,6 +1,6 @@
 from django.urls import path
 
-from .views import GetListPlantView
+from .views import GetListPlantView, GetCategoriesView
 from .views import GetListSeedView
 from .views import GetPlantByIdView
 from .views import GetSeedByIdView
@@ -10,4 +10,5 @@ urlpatterns = [
     path("plants/<uuid:id>/", GetPlantByIdView.as_view(), name="plant-detail"),
     path("seeds/", GetListSeedView.as_view(), name="seed-list"),
     path("seeds/<uuid:id>/", GetSeedByIdView.as_view(), name="seed-detail"),
+    path("categories/", GetCategoriesView.as_view(), name="get-categories"),
 ]
